# EmbeddedProg

./: push.bat
Module_1/T1_1_First_task/src/: main.cpp
Module_2/T2_1_First_touch/src/: first.cpp
Module_2/T2_2_Rectangle/src/: rectangle.cpp
Module_2/T2_3_Simple_class/src/: person.cpp  person.hpp
Module_2/T2_4_Dog_class/src/: dog_class.cpp  dog_class.hpp
Module_2/T2_5_Bank_account/src/: bank_account.cpp
Module_2/T2_6_Vectors/src/: vector.cpp
Module_2/T2_7_Vector_of_strings/src/: vector_strings.cpp
Module_3/T3_1_Vector_iterators/src/: vector_it.cpp
Module_3/T3_2_List/src/: list.cpp
Module_3/T3_3_Matrix_rotation/src/: matrix.cpp
Module_3/T3_4_Library/src/: book.cpp  book.hpp  customer.cpp  customer.hpp  library.cpp  library.hpp
Module_3/T3_5_Pokemon/src/: pokemon.cpp
Module_4/T4_1_Mammals/src/: cat.cpp  cat.hpp  dog.cpp  dog.hpp
Module_4/T4_2_Trolls_and_dragons/src/: creature.cpp  creature.hpp  dragon.cpp  dragon.hpp  troll.cpp
Module_4/T4_3_Overload_operators/src/: geomvector.cpp  geomvector.hpp
Module_4/T4_4_Birds/src/: aviary.cpp  aviary.hpp  duck.hpp  owl.hpp
Module_4/T4_5_Dragons/src/: dragon.cpp  dragon.hpp  dragon_cave.cpp  dragon_cave.hpp  fantasy_dragon.cpp  fantasy_dragon.hpp  magic_dragon.cpp  magic_dragon.hpp
Module_5/: .gitignore
Module_5/T5_1_Simplest_computer/: .gitignore  CMakeLists.txt
Module_5/T5_1_Simplest_computer/src/: main.cpp
Module_5/T5_2_GPIO_and_IRQ/src/: main.cpp
Module_6/T6_1_Function_pointers/: CMakeLists.txt
Module_6/T6_1_Function_pointers/src/: main.cpp
Module_7/: .gitignore
Module_7/T7_1_Advertising_packets/src/: adv_packets.cpp  adv_packets.h  advertisement_data.cpp
Module_7/T7_2_Generic_access_profile/: CMakeLists.txt
Module_7/T7_2_Generic_access_profile/src/: gap_button.cpp  gap_button.hpp  main.cpp
Module_8/T8_1_Attribute_parsing_and_modification/: .gitignore
Module_8/T8_1_Attribute_parsing_and_modification/src/: attribute_ops.cpp  attribute_ops.hpp
Module_8/T8_2_Mini_characteristic_container/src/: main.cpp  mini_characteristic.cpp
Module_8/T8_3_Service_construction_with_real_Characteristic_objects/src/: attribute_server.cpp  main.cpp  service_builder.cpp  service_builder.hpp
Module_8/T8_4_GATT_service/src/: gap_event_handler.cpp  gap_event_handler.hpp  main.cpp
Module_8/T8_5_Custom_GATT_server/: CMakeLists.txt  CMakePresets.json
Module_8/T8_5_Custom_GATT_server/src/: app_profile.gatt  gap_event_handler.cpp  gap_event_handler.hpp  main.cpp
pico-workspace/T6_2_Multitasking/src/: main.cpp  vars.make
pico-workspace/T7_1_Advertising_packets/: CMakeLists.txt
pico-workspace/T7_1_Advertising_packets/src/: main.cpp
pico-workspace/T8_1_Attribute_parsing_and_modification/: CMakeLists.txt
pico-workspace/T8_1_Attribute_parsing_and_modification/src/: main.cpp
pico-workspace/T8_2_Mini_characteristic_container/: CMakeLists.txt
pico-workspace/T8_2_Mini_characteristic_container/src/: mini_characteristic.cpp  mini_characteristic.hpp
pico-workspace/T8_3_Service_construction_with_real_Characteristic_objects/src/: service_builder.cpp
pico-workspace/T8_4_GATT_service/: CMakeLists.txt
pico-workspace/T8_4_GATT_service/src/: app_profile.gatt  gap_event_handler.cpp  main.cpp
pico-workspace/T9_1_Secured_service_construction_and_access_decisions/: CMakeLists.txt
pico-workspace/T9_1_Secured_service_construction_and_access_decisions/src/: bluetooth_gatt.h  characteristic_platform.cpp  main.cpp  service_builder.cpp  service_builder.hpp
pico-workspace/c7222-development/: README.md
