cmake_minimum_required(VERSION 3.11.0)
project(t8_3_service_builder VERSION 0.1.0)

enable_language(CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_BUILD_TYPE Debug)

file(GLOB SOURCES_CPP "src/*.cpp")
file(GLOB SOURCES_HPP "src/*.hpp")
file(GLOB SOURCES_H "src/*.h")
add_executable(t8_3_service_builder)
target_sources(t8_3_service_builder PUBLIC ${SOURCES_CPP} ${SOURCES_H} ${SOURCES_HPP})
target_include_directories(t8_3_service_builder PUBLIC .)
target_include_directories(t8_3_service_builder PUBLIC src)
if(MSVC)
  target_compile_options(t8_3_service_builder PRIVATE /Wall)
else()
  target_compile_options(t8_3_service_builder PRIVATE -Wall -Wextra -pedantic)
endif()
